--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(#fff 50%, #a6b57e);
 }
 
 code {
